# esp32_platform

./: .gitignore  README.md
aws-iot-examples/01_awsProvisioning/main/: app_config.h  app_main.c
aws-iot-examples/02_awsPubSub/main/: app_config.h  app_main.c
aws-iot-examples/03_awsShadowUpdate/: CMakeLists.txt  sdkconfig.old
aws-iot-examples/03_awsShadowUpdate/main/: app_config.h  app_main.c
aws-iot-examples/04_awsJobs/: sdkconfig
aws-iot-examples/04_awsJobs/main/: app_main.c
aws-iot-examples/05_awsOTA/: Makefile
aws-iot-examples/05_awsOTA/main/: app_config.h  app_main.c
aws-iot-examples/06_all/: CMakeLists.txt  sdkconfig
aws-iot-examples/06_all/main/: app_config.h  app_main.c
aws-iot-examples/07_awsProvisioningUsingBLE/: sdkconfig
aws-iot-examples/07_awsProvisioningUsingBLE/main/: CMakeLists.txt  app_config.h  app_main.c
aws-iot-examples/08_wifiConfigUsingBLE/: sdkconfig  sdkconfig.old
aws-iot-examples/08_wifiConfigUsingBLE/main/: app_config.h  app_main.c
aws-iot-examples/otaS3Bucket/: CMakeLists.txt  Makefile
aws-iot-examples/otaS3Bucket/main/: app_config.h  app_main.c  app_main.h
aws-iot-examples/otaS3BucketTFT/: CMakeLists.txt  sdkconfig
aws-iot-examples/otaS3BucketTFT/main/: CMakeLists.txt  app_main.c  lib_display_TJCTM24024.c  lib_display_TJCTM24024.h
aws-iot-examples/provisionByClaim/: CMakeLists.txt  Makefile  sdkconfig.old
aws-iot-examples/provisionByClaim/main/: CMakeLists.txt  app_main.c  app_main.h  component.mk
aws-iot-examples/provisionByClaimTFT/: CMakeLists.txt
aws-iot-examples/provisionByClaimTFT/main/: app_config.h  app_main.c  lib_display_TJCTM24024.c
aws-iot-examples/shadowUpdates/: CMakeLists.txt
aws-iot-examples/shadowUpdates/main/: app_config.h  app_main.c  component.mk
aws-iot-examples/shadowUpdatesTFT/: CMakeLists.txt
aws-iot-examples/shadowUpdatesTFT/main/: app_config.h  app_main.c  lib_display_TJCTM24024.c  lib_display_TJCTM24024.h
bs_esp32_platform/: CMakeLists.txt
bs_esp32_platform/lib/include/: lib_aws.h  lib_ble.h  lib_config.h  lib_delay.h  lib_flash.h  lib_gpio.h  lib_http.h  lib_jobs.h  lib_json.h  lib_menu.h  lib_mqtt.h  lib_msg.h  lib_ota.h  lib_print.h  lib_ringBuffer.h  lib_system.h  lib_uart.h  lib_utils.h  lib_wifi.h  stdutils.h
esp32_Lib/: drv_ble.h  lib_aws.h  lib_ble.h  lib_config.h  lib_crc8.h  lib_defines.h  lib_device.h  lib_events.h  lib_flash.h  lib_gpio.h  lib_jobs.h  lib_json.h  lib_menu.h  lib_mqtt.h  lib_oled.h  lib_ota.h  lib_print.h  lib_ringBuffer.h  lib_system.h  lib_wifi.h  stdutils.h
hello-world/main/: CMakeLists.txt  app_config.h  app_main.c  component.mk
other-examples/01_uart/: CMakeLists.txt  Makefile
other-examples/01_uart/main/: CMakeLists.txt  app_config.h  app_main.c
other-examples/hello-world/: CMakeLists.txt  sdkconfig
(+5 files in other folders)
